--- a/main.ipynb
+++ b/main.ipynb
@@ -251,6 +251,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -U :class:`~langchain-pinecone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import as `from :class:`~langchain_pinecone import Pinecone"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -690,6 +708,68 @@
    "source": [
     "agent(\"can you summarize these facts in two short sentences\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m```json\n",
+      "{\n",
+      "    \"action\": \"Knowledge Base\",\n",
+      "    \"action_input\": \"Challenges faced by immigrants in Germany\"\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mImmigrants in Germany face several challenges, including bureaucratic hurdles in navigating the immigration system, difficulties in finding affordable housing due to high rental prices, language barriers that can hinder integration and access to services, discrimination and racism experienced by some individuals, challenges in finding employment that matches their skills and qualifications, and difficulties in making social connections and forming friendships due to cultural differences and social norms. Additionally, some immigrants may struggle with the high cost of living, limited access to certain benefits, and potential legal issues related to their immigration status.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m```json\n",
+      "{\n",
+      "    \"action\": \"Final Answer\",\n",
+      "    \"action_input\": \"Immigrants in Germany face challenges such as bureaucratic hurdles, high rental prices, language barriers, discrimination, employment difficulties, social integration issues, high cost of living, limited benefits access, and legal concerns.\"\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'can you explain what immigrants faces in germany?',\n",
+       " 'chat_history': [HumanMessage(content='what are the pros and cons of living in Germany?', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='The pros of living in Germany include free education at public universities, drinkable tap water, generous unemployment benefits, punctuality, high quality of life, efficient public transport, and honesty. On the other hand, cons include bureaucratic challenges, difficulty in making friends, bad customer service, poor internet connection, lack of air conditioning, language barriers, and high rent prices.', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='what is the topic of the videos?', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='The pros of living in Germany include free education at public universities, drinkable tap water, generous unemployment benefits, punctuality, high quality of life, efficient public transport, and honesty. On the other hand, cons include bureaucratic challenges, difficulty in making friends, bad customer service, poor internet connection, lack of air conditioning, language barriers, and high rent prices.', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='can you tell me some facts about living in Germany?', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Living in Germany offers many advantages, such as free education at public universities for more than 25 years, drinkable tap water, unemployment benefits, punctual people, a very livable environment, efficient public transport, and fairly honest and reliable individuals. However, there are also challenges like bureaucracy, difficulty in making friends, bad customer service, bad internet connection, lack of air conditioning, and the tough German language. The country has a strong economy, great infrastructure, and a high quality of life, but it also faces issues like an aging population, the need for skilled immigrants, and debates on migration policies. The government is under pressure to address these concerns and is considering measures like Third Country solutions for processing asylum applications outside of Germany.', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='can you summarize these facts in two short sentences', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Living in Germany offers many advantages like free education, drinkable tap water, and efficient public transport, but it also comes with challenges such as bureaucracy, language barriers, and high rent prices.', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='can you summarize these facts in two short sentences', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Living in Germany offers many advantages like free education, drinkable tap water, and efficient public transport, but it also comes with challenges such as bureaucracy, language barriers, and high rent prices.', additional_kwargs={}, response_metadata={})],\n",
+       " 'output': 'Immigrants in Germany face challenges such as bureaucratic hurdles, high rental prices, language barriers, discrimination, employment difficulties, social integration issues, high cost of living, limited benefits access, and legal concerns.'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent(\"can you explain what immigrants faces in germany?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
