--- a/main.ipynb
+++ b/main.ipynb
@@ -788,18 +788,144 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Rouge Evaluation "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pinecone import Pinecone, ServerlessSpec\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import transformers\n",
+    "from transformers import T5ForConditionalGeneration, T5Tokenizer, Trainer, TrainingArguments\n",
+    "import evaluate\n",
+    "from nltk.tokenize import sent_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fetch YouTube video transcripts\n",
+    "def get_video_transcript(vid_id):\n",
+    "    try:\n",
+    "        transcript_data = YouTubeTranscriptApi.get_transcript(vid_id)\n",
+    "        transcript_text = \" \".join([item['text'] for item in transcript_data if 'text' in item])\n",
+    "        return transcript_text\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error retrieving transcript for video {vid_id}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "video_ids = ['2u4ItZerRac', 'I2zF1I60hPg', '8xqSF-uHCUs', 'LtmS-c1pChY', 'sJNxT-I7L6s']\n",
+    "transcripts = {}\n",
+    "\n",
+    "for vid_id in video_ids:\n",
+    "    trans = get_video_transcript(vid_id)\n",
+    "    if trans:\n",
+    "        transcripts[vid_id] = trans\n",
+    "    else:\n",
+    "        print(f\"No transcript available for video {vid_id}\")\n",
+    "\n",
+    "reference_summaries = {\n",
+    "    '2u4ItZerRac': \"Living in Germany offers a strong economy and high quality of life. However, there are challenges like language barriers and integration issues.\",\n",
+    "    'I2zF1I60hPg': \"Germany has a robust healthcare system and rich cultural experiences, but the cost of living is high.\",\n",
+    "    '8xqSF-uHCUs': \"Germany provides efficient public services and strong social security, but finding housing can be difficult.\",\n",
+    "    'LtmS-c1pChY': \"Germany's education system and work-life balance are excellent, but the tax system is complex.\",\n",
+    "    'sJNxT-I7L6s': \"Germany's vibrant cities and safety are attractive, but cultural differences can be a challenge.\"\n",
+    "}\n",
+    "\n",
+    "# Prepare the dataset\n",
+    "dataset = [{\"transcript\": transcript, \"summary\": summary} for transcript, summary in zip(transcripts.values(), reference_summaries.values())]\n",
+    "\n",
+    "# Load the tokenizer and model\n",
+    "model_name = \"t5-base\"\n",
+    "tokenizer = T5Tokenizer.from_pretrained(model_name)\n",
+    "model = T5ForConditionalGeneration.from_pretrained(model_name)\n",
+    "\n",
+    "# Tokenize the dataset\n",
+    "def tokenize_function(examples):\n",
+    "    model_inputs = tokenizer_small(\"summarize: \" + examples[\"transcript\"], max_length=512, truncation=True, padding=\"max_length\")\n",
+    "    with tokenizer_small.as_target_tokenizer():\n",
+    "        labels = tokenizer_small(examples[\"summary\"], max_length=128, truncation=True, padding=\"max_length\")\n",
+    "    model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
+    "    return model_inputs\n",
+    "\n",
+    "# Apply the tokenization function to the dataset\n",
+    "tokenized_dataset = list(map(tokenize_function, dataset))\n",
+    "\n",
+    "# Convert the tokenized dataset to a format compatible with the Trainer\n",
+    "class SummarizationDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, tokenized_dataset):\n",
+    "        self.tokenized_dataset = tokenized_dataset\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.tokenized_dataset)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return {key: torch.tensor(val) for key, val in self.tokenized_dataset[idx].items()}\n",
+    "\n",
+    "train_dataset = SummarizationDataset(tokenized_dataset)\n",
+    "\n",
+    "# Define the training arguments\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir='./results',\n",
+    "    num_train_epochs=3,\n",
+    "    per_device_train_batch_size=1,\n",
+    "    per_device_eval_batch_size=1,\n",
+    "    warmup_steps=500,\n",
+    "    weight_decay=0.01,\n",
+    "    logging_dir='./logs',\n",
+    "    logging_steps=10,\n",
+    ")\n",
+    "\n",
+    "# Initialize the Trainer\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=train_dataset  # Using the same dataset for demonstration\n",
+    ")\n",
+    "\n",
+    "# Fine-tune the model\n",
+    "trainer.train()\n",
+    "\n",
+    "# Generate summaries for the transcripts\n",
+    "def generate_summaries(texts_list, tokenizer, model, max_length=125):\n",
+    "    summaries = []\n",
+    "    for text in texts_list:\n",
+    "        inputs = tokenizer(\"summarize: \" + text, return_tensors=\"pt\", max_length=512, truncation=True).input_ids\n",
+    "        outputs = model.generate(inputs, max_length=max_length, num_beams=2, early_stopping=True)\n",
+    "        summary = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+    "        summaries.append(summary)\n",
+    "    return summaries\n",
+    "\n",
+    "generated_summaries = generate_summaries(list(transcripts.values()), tokenizer, model)\n",
+    "\n",
+    "# Load ROUGE\n",
+    "rouge_score = evaluate.load(\"rouge\")\n",
+    "\n",
+    "# Define the compute_rouge_score function\n",
+    "def compute_rouge_score(generated, reference):\n",
+    "    generated_with_newlines = [\"\\n\".join(sent_tokenize(s.strip())) for s in generated]\n",
+    "    reference_with_newlines = [\"\\n\".join(sent_tokenize(s.strip())) for s in reference]\n",
+    "    return rouge_score.compute(predictions=generated_with_newlines, references=reference_with_newlines, use_stemmer=True)\n",
+    "\n",
+    "# Evaluate the generated summaries\n",
+    "generated_summaries_dict = {video_id: summary for video_id, summary in zip(transcripts.keys(), generated_summaries)}\n",
+    "new_rouge_scores = compute_rouge_score(list(generated_summaries_dict.values()), list(reference_summaries.values()))\n",
+    "\n",
+    "print(new_rouge_scores)"
+   ]
   },
   {
    "cell_type": "code",
@@ -873,188 +999,6 @@
     "    return {\"average_similarity\": average_similarity, \"similarities\": similarities}\n",
     "\n",
     "# Run evaluation\n",
-    "metrics = evaluate_model(qa, evaluation_data)\n",
-    "print(metrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting openai==0.28\n",
-      "  Using cached openai-0.28.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Requirement already satisfied: requests>=2.20 in c:\\users\\mehak\\appdata\\roaming\\python\\python312\\site-packages (from openai==0.28) (2.32.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\mehak\\appdata\\roaming\\python\\python312\\site-packages (from openai==0.28) (4.67.1)\n",
-      "Requirement already satisfied: aiohttp in c:\\programdata\\anaconda3\\lib\\site-packages (from openai==0.28) (3.10.5)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mehak\\appdata\\roaming\\python\\python312\\site-packages (from requests>=2.20->openai==0.28) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mehak\\appdata\\roaming\\python\\python312\\site-packages (from requests>=2.20->openai==0.28) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mehak\\appdata\\roaming\\python\\python312\\site-packages (from requests>=2.20->openai==0.28) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mehak\\appdata\\roaming\\python\\python312\\site-packages (from requests>=2.20->openai==0.28) (2024.12.14)\n",
-      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from aiohttp->openai==0.28) (2.4.0)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from aiohttp->openai==0.28) (1.2.0)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from aiohttp->openai==0.28) (23.1.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from aiohttp->openai==0.28) (1.4.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from aiohttp->openai==0.28) (6.0.4)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from aiohttp->openai==0.28) (1.11.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\mehak\\appdata\\roaming\\python\\python312\\site-packages (from tqdm->openai==0.28) (0.4.6)\n",
-      "Using cached openai-0.28.0-py3-none-any.whl (76 kB)\n",
-      "Installing collected packages: openai\n",
-      "  Attempting uninstall: openai\n",
-      "    Found existing installation: openai 1.60.1\n",
-      "    Uninstalling openai-1.60.1:\n",
-      "      Successfully uninstalled openai-1.60.1\n",
-      "Successfully installed openai-0.28.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  WARNING: The script openai.exe is installed in 'C:\\Users\\mehak\\AppData\\Roaming\\Python\\Python312\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
-      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "langchain-openai 0.3.0 requires openai<2.0.0,>=1.58.1, but you have openai 0.28.0 which is incompatible.\n",
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.0\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install openai==0.28"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "APIRemovedInV1",
-     "evalue": "\n\nYou tried to access openai.File, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAPIRemovedInV1\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 34\u001b[0m\n\u001b[0;32m     31\u001b[0m         f\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     33\u001b[0m \u001b[38;5;66;03m# Upload the file to OpenAI\u001b[39;00m\n\u001b[1;32m---> 34\u001b[0m upload_response \u001b[38;5;241m=\u001b[39m openai\u001b[38;5;241m.\u001b[39mFile\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m     35\u001b[0m     file\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mopen\u001b[39m(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[0;32m     36\u001b[0m     purpose\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfine-tune\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     37\u001b[0m )\n\u001b[0;32m     38\u001b[0m file_id \u001b[38;5;241m=\u001b[39m upload_response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Create a fine-tuning job\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\openai\\lib\\_old_api.py:39\u001b[0m, in \u001b[0;36m__call__\u001b[1;34m(self, *_args, **_kwargs)\u001b[0m\n",
-      "\u001b[1;31mAPIRemovedInV1\u001b[0m: \n\nYou tried to access openai.File, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n"
-     ]
-    }
-   ],
-   "source": [
-    "import openai\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "\n",
-    "# Load environment variables from a .env file\n",
-    "_ = load_dotenv(find_dotenv())\n",
-    "\n",
-    "# Get API keys from environment variables\n",
-    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
-    "if not OPENAI_API_KEY:\n",
-    "    raise ValueError(\"OPENAI_API_KEY is not set in the environment variables.\")\n",
-    "\n",
-    "# Set the OpenAI API key\n",
-    "openai.api_key = OPENAI_API_KEY\n",
-    "\n",
-    "# Fine-tuning data\n",
-    "fine_tuning_data = [\n",
-    "    {\"prompt\": \"what are the pros and cons of living in Germany?\", \"completion\": \" High-quality response 1\"},\n",
-    "    {\"prompt\": \"what is the topic of the videos?\", \"completion\": \" High-quality response 2\"},\n",
-    "    {\"prompt\": \"can you tell me some facts about living in Germany?\", \"completion\": \" High-quality response 3\"},\n",
-    "    {\"prompt\": \"can you summarize these facts in two short sentences\", \"completion\": \" High-quality response 4\"},\n",
-    "    {\"prompt\": \"can you explain what immigrants face in Germany?\", \"completion\": \" High-quality response 5\"},\n",
-    "]\n",
-    "\n",
-    "# Save the fine-tuning data to a JSONL file\n",
-    "file_path = Path(\"fine_tuning_data.jsonl\")\n",
-    "with file_path.open(\"w\") as f:\n",
-    "    for item in fine_tuning_data:\n",
-    "        json.dump(item, f)\n",
-    "        f.write(\"\\n\")\n",
-    "\n",
-    "# Upload the file to OpenAI\n",
-    "upload_response = openai.File.create(\n",
-    "    file=open(file_path, 'rb'),\n",
-    "    purpose='fine-tune'\n",
-    ")\n",
-    "file_id = upload_response['id']\n",
-    "\n",
-    "# Create a fine-tuning job\n",
-    "fine_tune_response = openai.FineTune.create(\n",
-    "    training_file=file_id,\n",
-    "    model=\"davinci\"  # or another model you wish to fine-tune\n",
-    ")\n",
-    "fine_tune_id = fine_tune_response['id']\n",
-    "\n",
-    "# Monitor the fine-tuning job\n",
-    "import time\n",
-    "\n",
-    "while True:\n",
-    "    status = openai.FineTune.retrieve(fine_tune_id)\n",
-    "    if status['status'] == 'succeeded':\n",
-    "        print(\"Fine-tuning completed successfully.\")\n",
-    "        break\n",
-    "    elif status['status'] == 'failed':\n",
-    "        print(\"Fine-tuning failed.\")\n",
-    "        break\n",
-    "    time.sleep(60)  # Wait for a minute before checking the status again\n",
-    "\n",
-    "# Get the fine-tuned model ID\n",
-    "fine_tuned_model_id = status['fine_tuned_model']\n",
-    "print(f\"Fine-tuned model ID: {fine_tuned_model_id}\")\n",
-    "\n",
-    "# Use the fine-tuned model\n",
-    "llm = ChatOpenAI(\n",
-    "    openai_api_key=OPENAI_API_KEY,\n",
-    "    model_name=fine_tuned_model_id,\n",
-    "    temperature=0.0\n",
-    ")\n",
-    "\n",
-    "# Reinitialize the RetrievalQA chain with the fine-tuned model\n",
-    "qa = RetrievalQA.from_chain_type(\n",
-    "    llm=llm,\n",
-    "    chain_type=\"stuff\",\n",
-    "    retriever=vectorstore.as_retriever()\n",
-    ")\n",
-    "\n",
-    "# Example evaluation data\n",
-    "evaluation_data = [\n",
-    "    {\"query\": \"what are the pros and cons of living in Germany?\", \"expected\": \"High-quality response 1\"},\n",
-    "    {\"query\": \"what is the topic of the videos?\", \"expected\": \"High-quality response 2\"},\n",
-    "    {\"query\": \"can you tell me some facts about living in Germany?\", \"expected\": \"High-quality response 3\"},\n",
-    "    {\"query\": \"can you summarize these facts in two short sentences\", \"expected\": \"High-quality response 4\"},\n",
-    "    {\"query\": \"can you explain what immigrants face in Germany?\", \"expected\": \"High-quality response 5\"},\n",
-    "]\n",
-    "\n",
-    "def evaluate_model(model, data):\n",
-    "    \"\"\"\n",
-    "    Evaluate the model using the provided data.\n",
-    "    \"\"\"\n",
-    "    actual_responses = []\n",
-    "    for item in data:\n",
-    "        response = model.run(item[\"query\"])\n",
-    "        actual_responses.append(response)\n",
-    "\n",
-    "    # Use difflib to get similarity ratio\n",
-    "    similarities = []\n",
-    "    for actual, expected in zip(actual_responses, [item[\"expected\"] for item in data]):\n",
-    "        similarity = difflib.SequenceMatcher(None, actual, expected).ratio()\n",
-    "        similarities.append(similarity)\n",
-    "\n",
-    "    average_similarity = sum(similarities) / len(similarities)\n",
-    "    return {\"average_similarity\": average_similarity, \"similarities\": similarities}\n",
-    "\n",
-    "# Run evaluation with the fine-tuned model\n",
     "metrics = evaluate_model(qa, evaluation_data)\n",
     "print(metrics)"
    ]
