--- a/main.ipynb
+++ b/main.ipynb
@@ -102,32 +102,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "BaseChatModel.invoke() missing 1 required positional argument: 'input'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_openai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChatOpenAI\n\u001b[0;32m      3\u001b[0m llm \u001b[38;5;241m=\u001b[39m ChatOpenAI(openai_api_key\u001b[38;5;241m=\u001b[39mOPENAI_API_KEY,\n\u001b[0;32m      4\u001b[0m     model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgpt-3.5-turbo\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m     temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0\u001b[39m)\n\u001b[1;32m----> 6\u001b[0m llm\u001b[38;5;241m.\u001b[39minvoke()\n",
-      "\u001b[1;31mTypeError\u001b[0m: BaseChatModel.invoke() missing 1 required positional argument: 'input'"
-     ]
-    }
-   ],
-   "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "\n",
-    "llm = ChatOpenAI(openai_api_key=OPENAI_API_KEY,\n",
-    "    model_name='gpt-3.5-turbo',\n",
-    "    temperature=0.0)\n",
-    "llm.invoke()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -824,10 +798,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aebaaaeae65f483b9a330cff92094d4c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating summaries:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "APIRemovedInV1",
+     "evalue": "\n\nYou tried to access openai.ChatCompletion, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAPIRemovedInV1\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 61\u001b[0m\n\u001b[0;32m     58\u001b[0m         summaries\u001b[38;5;241m.\u001b[39mappend(summary)\n\u001b[0;32m     59\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m summaries\n\u001b[1;32m---> 61\u001b[0m generated_summaries \u001b[38;5;241m=\u001b[39m generate_summaries_gpt(\u001b[38;5;28mlist\u001b[39m(transcripts\u001b[38;5;241m.\u001b[39mvalues()))\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m# Load ROUGE\u001b[39;00m\n\u001b[0;32m     64\u001b[0m rouge_score \u001b[38;5;241m=\u001b[39m evaluate\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrouge\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[22], line 46\u001b[0m, in \u001b[0;36mgenerate_summaries_gpt\u001b[1;34m(transcripts)\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m transcript \u001b[38;5;129;01min\u001b[39;00m tqdm(transcripts, desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerating summaries\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m     45\u001b[0m     prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSummarize the following text:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mtranscript\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSummary:\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 46\u001b[0m     response \u001b[38;5;241m=\u001b[39m openai\u001b[38;5;241m.\u001b[39mChatCompletion\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m     47\u001b[0m         model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-3.5-turbo\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     48\u001b[0m         messages\u001b[38;5;241m=\u001b[39m[\n\u001b[0;32m     49\u001b[0m             {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msystem\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are a helpful assistant.\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[0;32m     50\u001b[0m             {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: prompt}\n\u001b[0;32m     51\u001b[0m         ],\n\u001b[0;32m     52\u001b[0m         max_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m150\u001b[39m,\n\u001b[0;32m     53\u001b[0m         n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m     54\u001b[0m         stop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     55\u001b[0m         temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m,\n\u001b[0;32m     56\u001b[0m     )\n\u001b[0;32m     57\u001b[0m     summary \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m     58\u001b[0m     summaries\u001b[38;5;241m.\u001b[39mappend(summary)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\openai\\lib\\_old_api.py:39\u001b[0m, in \u001b[0;36mAPIRemovedInV1Proxy.__call__\u001b[1;34m(self, *_args, **_kwargs)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m_args: Any, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m_kwargs: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Any:\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m APIRemovedInV1(symbol\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_symbol)\n",
+      "\u001b[1;31mAPIRemovedInV1\u001b[0m: \n\nYou tried to access openai.ChatCompletion, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "from getpass import getpass\n",
+    "from youtube_transcript_api import YouTubeTranscriptApi\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "from tqdm.auto import tqdm\n",
+    "import openai\n",
+    "import evaluate\n",
+    "from nltk.tokenize import sent_tokenize\n",
+    "\n",
     "# Fetch YouTube video transcripts\n",
     "def get_video_transcript(vid_id):\n",
     "    try:\n",
@@ -859,69 +870,27 @@
     "# Prepare the dataset\n",
     "dataset = [{\"transcript\": transcript, \"summary\": summary} for transcript, summary in zip(transcripts.values(), reference_summaries.values())]\n",
     "\n",
-    "# Load the tokenizer and model\n",
-    "model_name = \"t5-base\"\n",
-    "tokenizer = T5Tokenizer.from_pretrained(model_name)\n",
-    "model = T5ForConditionalGeneration.from_pretrained(model_name)\n",
-    "\n",
-    "# Tokenize the dataset\n",
-    "def tokenize_function(examples):\n",
-    "    model_inputs = tokenizer_small(\"summarize: \" + examples[\"transcript\"], max_length=512, truncation=True, padding=\"max_length\")\n",
-    "    with tokenizer_small.as_target_tokenizer():\n",
-    "        labels = tokenizer_small(examples[\"summary\"], max_length=128, truncation=True, padding=\"max_length\")\n",
-    "    model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
-    "    return model_inputs\n",
-    "\n",
-    "# Apply the tokenization function to the dataset\n",
-    "tokenized_dataset = list(map(tokenize_function, dataset))\n",
-    "\n",
-    "# Convert the tokenized dataset to a format compatible with the Trainer\n",
-    "class SummarizationDataset(torch.utils.data.Dataset):\n",
-    "    def __init__(self, tokenized_dataset):\n",
-    "        self.tokenized_dataset = tokenized_dataset\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.tokenized_dataset)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        return {key: torch.tensor(val) for key, val in self.tokenized_dataset[idx].items()}\n",
-    "\n",
-    "train_dataset = SummarizationDataset(tokenized_dataset)\n",
-    "\n",
-    "# Define the training arguments\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
-    "    num_train_epochs=3,\n",
-    "    per_device_train_batch_size=1,\n",
-    "    per_device_eval_batch_size=1,\n",
-    "    warmup_steps=500,\n",
-    "    weight_decay=0.01,\n",
-    "    logging_dir='./logs',\n",
-    "    logging_steps=10,\n",
-    ")\n",
-    "\n",
-    "# Initialize the Trainer\n",
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=train_dataset,\n",
-    "    eval_dataset=train_dataset  # Using the same dataset for demonstration\n",
-    ")\n",
-    "\n",
-    "# Fine-tune the model\n",
-    "trainer.train()\n",
-    "\n",
-    "# Generate summaries for the transcripts\n",
-    "def generate_summaries(texts_list, tokenizer, model, max_length=125):\n",
+    "# Generate summaries using GPT-3.5-turbo\n",
+    "def generate_summaries_gpt(transcripts):\n",
     "    summaries = []\n",
-    "    for text in texts_list:\n",
-    "        inputs = tokenizer(\"summarize: \" + text, return_tensors=\"pt\", max_length=512, truncation=True).input_ids\n",
-    "        outputs = model.generate(inputs, max_length=max_length, num_beams=2, early_stopping=True)\n",
-    "        summary = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+    "    for transcript in tqdm(transcripts, desc=\"Generating summaries\"):\n",
+    "        prompt = f\"Summarize the following text:\\n\\n{transcript}\\n\\nSummary:\"\n",
+    "        response = openai.ChatCompletion.create(\n",
+    "            model=\"gpt-3.5-turbo\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "                {\"role\": \"user\", \"content\": prompt}\n",
+    "            ],\n",
+    "            max_tokens=150,\n",
+    "            n=1,\n",
+    "            stop=None,\n",
+    "            temperature=0.5,\n",
+    "        )\n",
+    "        summary = response.choices[0].message['content'].strip()\n",
     "        summaries.append(summary)\n",
     "    return summaries\n",
     "\n",
-    "generated_summaries = generate_summaries(list(transcripts.values()), tokenizer, model)\n",
+    "generated_summaries = generate_summaries_gpt(list(transcripts.values()))\n",
     "\n",
     "# Load ROUGE\n",
     "rouge_score = evaluate.load(\"rouge\")\n",
